align avatar and it's upload input [fixes #449690]

--- a/app/assets/stylesheets/application/_avatar.css.scss
+++ b/app/assets/stylesheets/application/_avatar.css.scss
@@ -8,3 +8,19 @@
     width: 50px;
   }
 }
+
+.avatar_and_name {
+  margin-bottom: 1.5385em;
+  label {
+    display: block;
+    margin-left: 0;
+    margin-bottom: 0.25em;
+  }
+  .avatar {
+    margin-right: 0.5em;
+    vertical-align: middle;
+  }
+  .input {
+    display: inline-block;
+  }
+}
